--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ghidra: [ "11.0" ]
+        ghidra: [ "11.0", "10.4" ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK 11
